# menu-service

./: Cargo.toml  Dockerfile  README.md  build.sh  dev-db-run.sh  dev-db-teardown.sh  docker-compose.yml  sqlx-data.json
migrations/: 20230515_init.down.sql  20230515_init.up.sql
migrations/2023-05-12-173044_create_menu/: down.sql  up.sql
src/: main.rs  schema.rs
src/actors/: mod.rs
src/api/: mod.rs
src/database/: mod.rs
src/dto/: item.rs  item_ingredient.rs  menu.rs  menu_category.rs
src/error/: mod.rs
src/models/: item.rs  item_ingredient.rs  menu.rs  menu_category.rs  menu_category_item.rs  mod.rs
src/service/: item.rs  menu.rs  mod.rs
src/vm/: item.rs  item_ingredient.rs  menu.rs  menu_category.rs  mod.rs
