[package]
name = "menu-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.136", features = ["derive"]}
dotenv = "0.15.0"
futures = "0.3"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
log = "0.4.17"
colored = { version = "2.0.0", features = ["no-color"] }
fern = "0.6.2"
humantime = "2.1.0"
diesel_migrations = "2.0.0"
actix = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }