[package]
name = "menu-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.136", features = ["derive"]}
dotenv = "0.15.0"
futures = "0.3"
log = "0.4.17"
colored = { version = "2.0.0", features = ["no-color"] }
fern = "0.6.2"
humantime = "2.1.0"
actix = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "offline"] }
serde_json = "1.0.91"
derive_more = "0.99.17"
